[metadata]
name = hyrise-data-placement
version = 0.0.1
author = Ben Hurdelhey
author_email = author@example.com
description = Tiering selection algorithms for the Hyrise database system.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/benrobby/hyrise-data-placement
project_urls =
    Bug Tracker = https://github.com/benrobby/hyrise-data-placement/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

python_requires = >=3.9
install_requires =
    wheel
    psycopg2
    black==22.3.0
    black[jupyter]==22.3.0
    tabulate
    autoflake
    pylint
    numpy
    scipy
    pandas
    colorama
    pyomo
    flake8
    build
    virtualenv
    seaborn
    dataclasses-json
    dataclasses_json
    isort
    matplotlib
    autoflake
    SQLAlchemy
    dacite
    dotmap
    gitpython
    ortools
    gprof2dot # gprof2dot -f pstats profile.out -o callingGraph.dot && dot -Tpng callingGraph.dot -o callingGraph.png

